helep/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helep
  labels:
    kubernetes.io/metadata.name: helep
